@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: javaObj.test,v 1.3 2002/12/07 08:51:03 mdejong Exp $
+# RCS: @(#) $Id: javaObj.test,v 1.4 2002/12/07 20:46:58 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -167,6 +167,23 @@ test javaObj-10.2 {JavaGetTclObject for a CObject} {
     set obj [list 1 2 3]
     jtest type $obj
 } tcl.lang.TclList
+
+test javaObj-11.1 {void return} {
+    # This should not set the result to a reflected
+    # empty string of type tcl.lang.TclString!
+
+    set result [java::call tests.JavaTest voidsmethod]
+    list $result [jtest type $result]
+} {{} tcl.lang.CObject}
+
+test javaObj-11.2 {void return} {
+    # This should not set the result to a reflected
+    # empty string of type tcl.lang.TclString!
+
+    set obj [java::new tests.JavaTest]
+    set result [$obj voidimethod]
+    list $result [jtest type $result]
+} {{} tcl.lang.CObject}
 
 # cleanup
 catch {interp delete [interp slaves]}
